2006-02-11  Andre Klapper <a9016009@gmx.de>

	* mail-config.glade: changed string and added translator comments.
	Fixes bug 256907.

2006-02-11  Karsten Bräckelmann  <guenther@rudersport.de>

	* message-list.c (message_list_construct): 
	* em-format-html-display.c (efhd_attachment_button, efhd_add_bar): 
	* em-account-prefs.c (em_account_prefs_treeview_new): 
	Change a11y names. Fixes part of bug #330723.

2006-02-10  Karsten Bräckelmann  <guenther@rudersport.de>

	* em-utils.c (em_utils_edit_filters): Fix Filters dialog window
	title to be HIG compliant. Fixes bug #330650.

2006-02-09  Sushma Rai  <rsushma@novell.com>

	* em-mailer-prefs.c (em_mailer_prefs_construct): Freeing font value 
	string. See #309316.

2006-02-08  Karsten Bräckelmann  <guenther@rudersport.de>

	* mail.error.xml: Fix typo and correct phrasing. Fixes bug #330387.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* em-account-editor.h: s/int/guint/g for 1-bit bitfield.
	* em-composer-utils.c: (em_utils_redirect_message): Remove cruft
	* em-folder-tree.c: (emft_drop_target): use guint for 1-bit bitfield
	and rename a variable with a name clash.
	* em-folder-utils.c: (em_folder_utils_rename_folder): Rename var to
	avoid name clashes.
	* em-folder-view.c: guint for 1-bit bitfields.
	* em-folder-view.h: Same as above.
	* em-format-html-print.h: Again.
	* em-format-html.c: (efh_text_html), (efh_multipart_related): Add comments
	* em-format.c: (emf_multipart_alternative): Add comment about using var that
	is passed in rather than a local variable.
	* em-inline-filter.c: (emif_scan): Remove unused var. Mark code static.
	* em-mailer-prefs.h: guint for 1-bit bitfields.
	* em-migrate.c: (em_migrate_folder): mark a struct static. remove unused var
	* em-subscribe-editor.c: guint for 1-bit bitfield
	* em-utils.c: remove unused function
	* em-vfolder-rule.c: mark array static
	* importers/mail-importer.c: (decode_status): Remove unused code. Use guint
	for 1-bit bitfield.